syntax = "proto3";

import "google/protobuf/wrappers.proto";

service DiscountProto {
	rpc GetDiscount (GetDiscountRequest) returns (CouponResponse);
	rpc CreateDiscount (CreateDiscountCommand) returns (DiscountCommandResponse);
	rpc UpdateDiscount (UpdateDiscountCommand) returns (DiscountCommandResponse);
	rpc DeleteDiscount (DeleteDiscountCommand) returns (DiscountCommandResponse);
}

message GetDiscountRequest {
	string ProductName = 1;
}

message CreateDiscountCommand {
	string ProductName = 1;
	string Description = 2;
	int32 Amount = 3;
}

message UpdateDiscountCommand {
	int32 Id = 1;
	string ProductName = 2;
	string Description = 3;
	int32 Amount = 4;
}

message DeleteDiscountCommand {
	string ProductName = 1;
}

message CouponResponse {
	int32 Id = 1;
	string ProductName = 2;
	string Description = 3;
	int32 Amount = 4;
}

message DiscountCommandResponse {
	bool Success = 1;
}